<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.tryouts.courierapplication.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login_register_header"
                android:id="@+id/login_header_textview"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/login_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/login_edittext_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/login_edittext_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:digits="0123456789+"/>

            <EditText
                android:id="@+id/login_edittext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:maxLines="1"
                android:hint="@string/hint_name"/>

            <Button
                android:id="@+id/login_button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/login_register_button" />

            <TextView
                android:text="@string/login_already_registerd"
                android:id="@+id/login_textview_already"
                android:textAlignment="center"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

</ScrollView>