<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal">

    <Button
        android:id="@+id/progress_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_accept_button"
        />

    <Button
        android:id="@+id/progress_success_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_order_success"/>

    <Button
        android:id="@+id/progress_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_order_cancel"/>

</LinearLayout>