<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/profileedit_heading_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/heading_name"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/profileedit_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:maxLines="1"
                android:hint="@string/hint_name"/>

            <TextView
                android:id="@+id/profileedit_heading_telephone_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/heading_phone"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/profileedit_telephone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:digits="0123456789+"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:maxLines="1"
                android:hint="@string/hint_phone"/>

            <TextView
                android:id="@+id/profileedit_heading_mail_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/heading_mail"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/profileedit_mail_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:maxLines="1"
                android:hint="@string/hint_mail"/>

            <Button
                android:id="@+id/profileedit_accept_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/profile_edit_accept"/>


        </LinearLayout>


</ScrollView>