<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="#F7931E">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/aboutus"
                    android:contentDescription="Logo"
                    />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/about_first_header"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/about_textview_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/about_address"
                android:textAlignment="center"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/about_second_header"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/about_phone_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/about_phone_number"
                android:autoLink="phone"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColorLink="?attr/colorPrimaryDark"/>

            <TextView
                android:id="@+id/about_mail_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_mail"
                android:textAlignment="center"
                android:autoLink="email"
                android:textSize="15sp"
                android:textColorLink="?attr/colorPrimaryDark"/>

        </LinearLayout>
</ScrollView>