<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/progress_header_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_accept_question"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            style="?android:listSeparatorTextViewStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/progress_header_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_date"/>

            <TextView
                android:id="@+id/progress_body_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/progress_header_from_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_from"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                style="?android:listSeparatorTextViewStyle"
                />

            <TextView
                android:id="@+id/progress_body_from_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/progress_header_to_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_to"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                style="?android:listSeparatorTextViewStyle"/>

            <TextView
                android:id="@+id/progress_body_to_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_distance"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                style="?android:listSeparatorTextViewStyle"/>

            <TextView
                android:id="@+id/progress_body_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/progress_header_phone_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_phone_number"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                style="?android:listSeparatorTextViewStyle"/>

            <TextView
                android:id="@+id/progress_body_phone_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <TextView
            android:id="@+id/progress_header_other_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress_other_services"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="?android:listSeparatorTextViewStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >

            <CheckedTextView
                android:id="@+id/progress_check_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false"
                />

            <CheckedTextView
                android:id="@+id/progress_check_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_2"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false"/>

            <CheckedTextView
                android:id="@+id/progress_check_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_3"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/progress_buttons_insert_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        </LinearLayout>



    </LinearLayout>
</ScrollView>